--- a/packages/powershell-bin/PKGBUILD
+++ b/packages/powershell-bin/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Cthulu201 <cthulu201@duck.com>
 
 pkgname=powershell-bin
-pkgver=7.4.2
-pkgrel=1
+pkgver=7.4.3
+pkgrel=2
 pkgdesc='A cross-platform automation and configuration tool/framework (binary package)'
 arch=('x86_64' 'armv7h' 'aarch64')
 url='https://github.com/Powershell/Powershell'
@@ -15,7 +15,7 @@ options=(staticlibs !strip)
 install=powershell.install
 source=("${pkgname}-${pkgver}.tar.gz::${url}/releases/download/v${pkgver}/${pkgname%-bin}-${pkgver}-linux-x64.tar.gz")
 noextract=("${pkgname}.tar.gz")
-sha512sums=('148524245a11ce471ea58c83f4048ee4a4fef4add1071ea66c876ff041bee71322a80d9db8ad70665f168846c6074c96e327b481fb4190cf9f8652788fc32036')
+sha512sums=('4bab6bce57db764c90fe4c614e1627bd4618b50ce5049ae9b4815cb989599147d5be4c7d39dbae6134d8df3bc5f1316bea527d8ab0824f4331518d6b00743f8e')
 
 prepare() {
 	tar xf "${pkgname}-${pkgver}.tar.gz" --one-top-level
@@ -29,5 +29,6 @@ package() {
 	install -Dm0644 "LICENSE.txt" "${pkgdir}/usr/share/licenses/powershell-bin/LICENSE"
 
 	cp -a ./* "${pkgdir}/opt/${pkgname}/"
+	chmod 0755 "${pkgdir}/opt/${pkgname}/pwsh"
 	ln -s "/opt/${pkgname}/pwsh" "${pkgdir}/usr/bin/pwsh"
 }
